/**
 * Questa classe rappresenta un giocatore.
 * @author Samuel Banfi
 * @author Lorenzo Spadea
 * @version 09.10.2021
 */
public abstract class AssaultRifle extends Weapon {
    
    /**
    
     */
    public AssaultRifle(int ammoCapacity) {
        super(ammoCapacity);
    }
}
