/**
 * Questa classe rappresenta un giocatore.
 * @author Samuel Banfi
 * @author Lorenzo Spadea
 * @version 09.10.2021
 */
public abstract class Revolver extends Weapon {
    
    /**
     *
     */
    public Revolver(int ammoCapacity) {
        super(ammoCapacity);
    }
}
