/**
 * Questa classe rappresenta un giocatore.
 * @author Samuel Banfi
 * @author Lorenzo Spadea
 * @version 09.10.2021
 */
public abstract class SniperRifle extends Weapon {
    
    /**
     *
     */
    public SniperRifle(int ammoCapacity) {
        
        super(ammoCapacity);
    }
}
